Delete entities from database